// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InformationModal events should closes when Ok button is clicked 1`] = `
<DocumentFragment>
  <div>
    <button
      class="MuiButtonBase-root MuiIconButton-root"
      style="padding: 0px;"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <div>
          Close Icon
        </div>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Ok
      </span>
      <span
        class="MuiTouchRipple-root"
      >
        <span
          class="MuiTouchRipple-ripple MuiTouchRipple-rippleVisible"
          style="width: 2.8284271247461903px; height: 2.8284271247461903px; top: -1.4142135623730951px; left: -1.4142135623730951px;"
        >
          <span
            class="MuiTouchRipple-child MuiTouchRipple-childLeaving"
          />
        </span>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`InformationModal events should closes when close button is clicked 1`] = `
<DocumentFragment>
  <div>
    <button
      class="MuiButtonBase-root MuiIconButton-root"
      style="padding: 0px;"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <div>
          Close Icon
        </div>
      </span>
      <span
        class="MuiTouchRipple-root"
      >
        <span
          class="MuiTouchRipple-ripple MuiTouchRipple-rippleVisible"
          style="width: 1px; height: 1px; top: -0.5px; left: -0.5px;"
        >
          <span
            class="MuiTouchRipple-child MuiTouchRipple-childLeaving"
          />
        </span>
      </span>
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Ok
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`InformationModal loading status render with loading icon 1`] = `
<DocumentFragment>
  <div>
    <button
      class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
      disabled=""
      style="padding: 0px;"
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <div
          class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
          role="progressbar"
          style="width: 20px; height: 20px;"
        >
          <svg
            class="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
      </span>
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained Mui-disabled Mui-disabled"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <div
          class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
          role="progressbar"
          style="width: 20px; height: 20px;"
        >
          <svg
            class="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`InformationModal render component and match snapshot 1`] = `
<DocumentFragment>
  <div>
    <button
      class="MuiButtonBase-root MuiIconButton-root"
      style="padding: 0px;"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <div>
          Close Icon
        </div>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Ok
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;
